--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/ChubbyKay/A13_Middleware#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "on-finished": "^2.3.0",
+    "on-headers": "^1.0.2"
   }
 }
